<resources>
    <string name="app_name">Aubie Ball</string>
    <string name="icon_description">Auburn icon</string>

    <string name="home_title">Aubie Ball</string>
    <string name="scorecard_title">Scorecard</string>
    <string name="difficulty_title">Select Difficulty</string>

    <string name="highScoreLabel">Highscore</string>
    <string name="min_label">Mininum</string>
    <string name="avg_label">Average</string>
    <string name="max_label">Maximum</string>


    <string name="start_button">Start Game</string>
    <string name="score_button">View Score Records</string>
    <string name="easy_button">Easy</string>
    <string name="hard_button">Hard</string>
    <string name="reset_button">Reset Score Statistics</string>

    <string name="aubie_description">Aubie icon</string>
    <string name="auburn_description">Auburn Logo</string>
    <string name="bama_description">Alabama icon</string>

    <string name="required">Aubie Ball\nCameronKubik\nAuburn University   COMP3710   Spring 2018</string>
</resources>
