<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_difficulty_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleSegment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".20"
        android:paddingTop="30dp"
        android:text="@string/difficulty_title"
        android:textAlignment="center"
        android:textSize="36sp" />

    <FrameLayout
        android:id="@+id/easySegment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".40">

        <Button
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/easy_button"
            android:textAlignment="center" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/hardSegment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".40">

        <Button
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/hard_button"
            android:textAlignment="center" />
    </FrameLayout>
</LinearLayout>